DiplomacyCSS.css
canvas { 
    border: 1px solid black; 
}

button {
    margin-left:20px;
    border-radius: 25px;
    box-shadow: 2px 2px;
}

button:hover { 
    cursor: pointer; 
    box-shadow: 5px 5px;
}

input { 
    margin: 5px; 
    height: 15px;
    width: 90px;    
}

.fc {
    display: flex;
    flex-flow: row wrap;
    align-content: space-between;
}

.unit {
    width: 10px;
}

#inputs {
    margin-left: 10px;
    margin-top: 30px;
}

